--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ My name is Samuel Forbes and I have a background in mathematics and statistics. 
 </ul>
 </div>
 
-<img src="https://github.com/saf92/saf92.github.io/blob/main/pl_fit.png?raw=true" class="center" >
+<!-- <img src="https://github.com/saf92/saf92.github.io/blob/main/pl_fit.png?raw=true" class="center" > -->
 
 <!-- <h2> Education </h2> 
 <div class="container">
