--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 <body>
    
 <h1> About me </h1> 
-
-My name is Samuel Forbes and I have a background in mathematics and statistics. My research is in statistical modelling and analysis of heavy-tailed distributions with a particular interest in the wealth distribution. I am seeking roles in statistics/data science.
-
+Interested in philosophy, mathematics, statistics and economics.
 <div class="container">
 <ul class="myUL">
     <li>Contact: forbessam2@gmail.com</li>
-    <li><a href="https://github.com/saf92/saf92.github.io/blob/main/SF_CV.pdf"> CV </a></li>
+    <li><a href="file:///Users/samforbes/Desktop/SF_CV.pdf"> CV </a></li>
     <li><a href="https://github.com/saf92" > GitHub </a> </li>
 </ul>
 </div>
