--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Interested in philosophy, mathematics, statistics and economics.
 <div class="container">
 <ul class="myUL">
     <li>Contact: forbessam2@gmail.com</li>
-    <li><a href="file:///Users/samforbes/Desktop/SF_CV.pdf"> CV </a></li>
+    <li><a href="SF_CV.pdf"> CV </a></li>
     <li><a href="https://github.com/saf92" > GitHub </a> </li>
 </ul>
 </div>
