--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
 <html>
 <head>
   <link rel="stylesheet" href="classes.css">
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 </head>
 
 <body>
    
-<h1> About me </h1> 
-Interested in philosophy, mathematics, statistics and economics.
+
+<div class="container1">
+    It takes a wise man to discover a wise man. - Diogenes
+</div>
+
+<!-- \(\newcommand{\diff}{\mathrm{d}}\)
+\begin{equation*}
+S=-\int f \log_{\kappa} f  \, \diff x \, .
+\end{equation*} -->
+
 <div class="container">
 <ul class="myUL">
     <li>Contact: forbessam2@gmail.com</li>
