--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    
 
 <div class="container1">
-    It takes a wise man to discover a wise man. - Diogenes
+    "The only true wisdom is in knowing you know nothing." - Socrates
 </div>
 
 <!-- \(\newcommand{\diff}{\mathrm{d}}\)
