--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <script id="MathJax-script" async
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
+
+<meta name="apple-mobile-web-app-capable" content="yes">
 </head>
 
 <body>
