--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <html>
 <head>
   <link rel="stylesheet" href="classes.css">
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-  </script>
-
-<meta name="apple-mobile-web-app-capable" content="yes">
+  </script> -->
 </head>
 
 <body>
