--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 S=-\int f \log_{\kappa} f  \, \diff x \, .
 \end{equation*} -->
 
-<div class="container">
+<!-- <div class="container"> -->
 <ul class="myUL">
     <li>Contact: forbessam2@gmail.com</li>
     <li><a href="SF_CV.pdf"> CV </a></li>
     <li><a href="https://github.com/saf92" > GitHub </a> </li>
 </ul>
-</div>
+<!-- </div> -->
 
 <img src="pl_fit.png" class="center" >
 
@@ -43,7 +43,7 @@ S=-\int f \log_{\kappa} f  \, \diff x \, .
 
 <h1> Research </h1> 
 
-<ol>
+<ol class="myUL1">
   <li> Linear regression for power law distribution fitting, S. Forbes, arXiv, 2023 <a href="https://arxiv.org/abs/2312.13229#:~:text=We%20fit%20the%20exponent%20of,using%20linear%20regression%20(LR).">
      (Link) </a></li>
   <li> A study of the probability distribution of the balls in bins process with power law feedback,
