--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <script id="MathJax-script" async
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script> -->
+<meta name="viewport" content="width=device-width">
 </head>
 
 <body>
    
-
 <div class="container1">
     "The only true wisdom is in knowing you know nothing." - Socrates
 </div>
