--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script id="MathJax-script" async
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script> -->
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -22,13 +22,13 @@
 S=-\int f \log_{\kappa} f  \, \diff x \, .
 \end{equation*} -->
 
-<!-- <div class="container"> -->
+<div class="container">
 <ul class="myUL">
     <li>Contact: forbessam2@gmail.com</li>
     <li><a href="SF_CV.pdf"> CV </a></li>
     <li><a href="https://github.com/saf92" > GitHub </a> </li>
 </ul>
-<!-- </div> -->
+</div>
 
 <img src="pl_fit.png" class="center" >
 
