--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@ S=-\int f \log_{\kappa} f  \, \diff x \, .
 <h1> Research </h1> 
 
 <ol class="myUL1">
+   <li> The $\kappa$-generalised distribution for stock returns, S. Forbes, arXiv, 2023
+      <a href="https://arxiv.org/pdf/2405.09929">
+         (Link) </a>
+   </li>
   <li> Linear regression for power law distribution fitting, S. Forbes, arXiv, 2023 <a href="https://arxiv.org/abs/2312.13229#:~:text=We%20fit%20the%20exponent%20of,using%20linear%20regression%20(LR).">
      (Link) </a></li>
   <li> A study of the probability distribution of the balls in bins process with power law feedback,
