--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
 <html>
 <head>
   <link rel="stylesheet" href="classes.css">
-  <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-  </script> -->
+  </script>
 <meta name="viewport" content="width=device-width, initial-scale=0.5">
 </head>
 
 <body>
    
-<div class="container1">
-    "The only true wisdom is in knowing you know nothing." - Socrates
-</div>
+   <h1 class="container1"> Samuel Forbes  </h1> 
 
 <!-- \(\newcommand{\diff}{\mathrm{d}}\)
 \begin{equation*}
@@ -30,7 +28,7 @@ S=-\int f \log_{\kappa} f  \, \diff x \, .
 </ul>
 </div>
 
-<img src="pl_fit.png" class="center" >
+<img src="pl_fit.png" class="center" style="width:300px;height:200px;">
 
 <!-- <h2> Education </h2> 
 <div class="container">
@@ -41,10 +39,10 @@ S=-\int f \log_{\kappa} f  \, \diff x \, .
 </ul>
 </div> -->
 
-<h1> Research </h1> 
+<h1> My Research </h1> 
 
 <ol class="myUL1">
-   <li> The $\kappa$-generalised distribution for stock returns, S. Forbes, arXiv, 2023
+   <li> The \(\kappa\)-generalised distribution for stock returns, S. Forbes, arXiv, 2024
       <a href="https://arxiv.org/pdf/2405.09929">
          (Link) </a>
    </li>
