--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ S=-\int f \log_{\kappa} f  \, \diff x \, .
 </ul>
 </div> -->
 
-<h1> My Research </h1> 
+<h2> Research </h2> 
 
 <ol class="myUL1">
    <li> The \(\kappa\)-generalised distribution for stock returns, S. Forbes, arXiv, 2024
