--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
    
-   <h1 class="container1"> Samuel Forbes  </h1> 
+   <!-- <h1 class="container1"> Samuel Forbes  </h1>  -->
+   <h1> Samuel Forbes  </h1> 
 
 <!-- \(\newcommand{\diff}{\mathrm{d}}\)
 \begin{equation*}
@@ -39,7 +40,8 @@ S=-\int f \log_{\kappa} f  \, \diff x \, .
 </ul>
 </div> -->
 
-<h2 class="container1"> Research </h2> 
+<!-- <h2 class="container1"> Research </h2>  -->
+<h2> Research </h2> 
 
 <ol class="myUL1">
    <li> The \(\kappa\)-generalised distribution for stock returns, S. Forbes, arXiv, 2024
