--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@ S=-\int f \log_{\kappa} f  \, \diff x \, .
 <h2> Research </h2> 
 
 <ol class="myUL1">
+   <li>
+      A Dynamical Systems Model for Population and Depleting Resources, S. Forbes, 2024
+      <a href="https://github.com/saf92/population-resources/blob/main/pop_res.pdf">
+         (Link) </a>
+   </li>
    <li> The \(\kappa\)-generalised distribution for stock returns, S. Forbes, arXiv, 2024
       <a href="https://arxiv.org/pdf/2405.09929">
          (Link) </a>
